# max_ros

./: .gitignore  README.md
max_ai/: CMakeLists.txt  CMakeLists.txt~  package.xml  setup.py
max_ai/nodes/: cmd1.py  master.py  master1.py  mcp.py  mcp1.py  nlp.py  nlp.py~  notes  switch.py  switch1.py  switch2.py  switch3.py  switch4.py
max_ai/nodes/data/: robbie_memory.db
max_ai/src/max_ai/: cap.py  conf_state.py  look_up.py  mcp_tasks.py  mem.py  mem_db.py  mem_db.py~  quest_def.py  quest_state.py  robbie_memory.sqlite  sa.py  servo.py  table_question_defination.py  utilities.py
max_ai/src/max_ai/data/: emotion.pkl  robbie.pkl  robbie.pkl~
max_bringup/: CMakeLists.txt  CMakeLists.txt~  package.xml
max_bringup/config/: arduino_params.yaml  max_head.yaml
max_bringup/launch/: max.launch  max_head.launch
max_bringup/nodes/: arduino_node.py  servo_client.py  servo_client2.py  servo_client4.py
max_bringup/src/max_bringup/: arduino_driver.py  arduino_driver.py~
max_chat/: CMakeLists.txt  package.xml  setup.py
max_chat/data/: local_words  local_words~
max_chat/nodes/: commands.aiml  commands.aiml~  firsttry.aiml  max_chat.py  max_chat.py~  new_ai.py  new_ai.py~
max_chat/nodes/aiml/: Kernel.py  Kernel.py~  chat_serv_call.py  chat_serv_call.py~  know.py~  t_know.py  test.py~
max_chat/nodes/data/: learnt.aiml  unk_text.txt
max_cognitive/: CMakeLists.txt  package.xml  setup.py
max_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  setup.py  setup.py~
max_messages/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
max_messages/srv/: Cmd.srv
max_ros/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
