<?xml version="1.0"?>
<package>
  <name>max_ros</name>
  <version>0.0.0</version>
  <description>The max_ros package</description>

  <maintainer email="peter@todo.todo">peter</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>max_ai</run_depend>
  <run_depend>max_bringup</run_depend>
  <run_depend>max_description</run_depend>
  <run_depend>max_teleop</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage/>

  </export>
</package>
